tests/positive/rule2_binary_search_function.safe
-- Test: rule2_binary_search_function
-- Description: Binary search as a record-returning function with early returns.
--   The midpoint is computed from valid bounds and used for in-range
--   indexing, while the function returns from multiple control-flow exits.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p131:30aba5f5
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p126:812b54a8
-- Expected: ACCEPT

package Binary_Search_Function

   type Index is range 1 to 64;
   type Element is range 0 to 10_000;
   type Sorted_Array is array (Index) of Element;
   type Search_Result is record
      Found    : Boolean;
      Found_At : Index;


   function Search (Arr : Sorted_Array;
                    Key : Element) returns Search_Result
      Lo  : Index = Index.First;
      Hi  : Index = Index.Last;
      Mid : Index;

      while Lo <= Hi
         Mid = Lo + (Hi - Lo) / 2;
         if Arr (Mid) == Key
            return ((Found = True, Found_At = Mid) as Search_Result);
         else if Arr (Mid) < Key
            if Mid == Index.Last
               return ((Found = False, Found_At = Index.First) as Search_Result);

            Lo = Mid + 1;
         else
            if Mid == Index.First
               return ((Found = False, Found_At = Index.First) as Search_Result);

            Hi = Mid - 1;


      return ((Found = False, Found_At = Index.First) as Search_Result);



